Fix gap under mobile menu when scrolling

--- a/src/styles/eleventy-patterns/patterns/nav.scss
+++ b/src/styles/eleventy-patterns/patterns/nav.scss
@@ -50,8 +50,8 @@
 
 .EP_nav__menu {
   background: var(--EP_color-white);
-  height: calc(100vh - var(--EP_nav-height));
   left: 0;
+  min-height: 100vh;
   overflow-y: auto;
   position: absolute;
   top: var(--EP_nav-height);
